<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickEvent"
            type="mvvmkotlin.acaziasoft.app.com.mvvmkotlinexample.viewmodel.HomeFragmentViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnOpenActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> clickEvent.onClickOpenActivity()}"
            android:text="@string/open_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnReplaceFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{()-> clickEvent.onClickReplaceFragment()}"
            android:text="@string/replace_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnOpenActivity" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnAddFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{()-> clickEvent.onClickAddFragment()}"
            android:text="@string/add_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnReplaceFragment" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnViewPagerInActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{()-> clickEvent.onClickViewPagerInActivity()}"
            android:text="@string/viewpager_in_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddFragment" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnViewPagerInFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{()-> clickEvent.onClickViewPagerInFragment()}"
            android:text="@string/viewpager_in_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnViewPagerInActivity" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{()-> clickEvent.onClickRecyclerView()}"
            android:text="@string/recyclerview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnViewPagerInFragment" />


    </android.support.constraint.ConstraintLayout>
</layout>